# lab-os

./: .gitignore  BACKLOG.md  BOOTSTRAP.md  PR-LIFECYCLE.md  README.md  TROUBLESHOOTING.md  WORKING-WITH-CLAUDE.md  project_log.md  project_log_archive.md
.claude/: CLAUDE.md
.claude/rules/: 01-workflow.md  02-data-protection.md  03-logging.md  04-docs.md  05-network-boundaries.md
.github/: pull_request_template.md
.github/workflows/: deploy-site.yml  docs-budget.yml  log-lint.yml  merge-bar-check.yml  standards.yml
docs/conventions-collection/: README.md  preview.html
site/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
site/docs/: getting-started.mdx  (+9 more)
templates/: PRD.template.md  backlog-item.template.md  dev-root-CLAUDE.template.md  global-CLAUDE.template.md  repo-CLAUDE.template.md
templates/desktop-control-panel/app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
templates/desktop-control-panel/app/src-tauri/src/: lib.rs
templates/desktop-control-panel/app/src-tauri/src/identity/: mod.rs
templates/desktop-control-panel/app/src-tauri/src/settings/: commands.rs  mod.rs
templates/desktop-control-panel/app/src-tauri/src/shared/: config.rs  error.rs  log.rs  mod.rs  types.rs
templates/desktop-control-panel/app/src-tauri/src/storage/: commands.rs  connection.rs  error.rs  migrations.rs  mod.rs
templates/desktop-control-panel/app/src-tauri/src/storage/migrations/: 001_init.sql  002_update_checks.sql
templates/desktop-control-panel/app/src-tauri/src/update/: commands.rs  mod.rs
(+97 files in other folders)
